tests/file_SyntaxError/file_SyntaxError_2_expected.txt
tests/file_SyntaxError/file_SyntaxError_2.ml:1 20-21
let a = (print_char 'a)
                    ^ the syntax's' wrong.
Note: the location indicated might not be accurate.
